--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 * {
   margin: 0;
   padding: 0;
 }
 
 .header {
-  height: 121px;
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+  width: 100%;
+  /* height: 121px; */
+  gap: 20px;
 }
 .menu {
   display: flex;
@@ -14,7 +20,8 @@
 .text {
   background-color: #ffffff;
   font-size: 14px;
-  padding: 20px;
+  font-family: "Inter", sans-serif;
+  padding: 40px;
   align-items: center;
   gap: 40px;
 }
@@ -53,7 +60,186 @@
   display: flex;
   flex-direction: column;
   color: white;
+  font-family: "Inter", sans-serif;
   justify-content: end;
   align-items: center;
-  padding: 30px;
+  padding: 40px;
+  gap: 10px;
+}
+.section-2 {
+  height: 500px;
+  background-image: url("./images/figure2.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  color: white;
+  font-family: "Inter", sans-serif;
+  justify-content: start;
+  align-items: center;
+  padding: 40px;
+  gap: 10px;
+}
+.learnbutton1 {
+  border: 1px solid white;
+  width: 107px;
+  height: 36px;
+  border-radius: 999px;
+  background-color: white;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.buybutton1 {
+  border: 1px solid white;
+  border-radius: 999px;
+  width: 66px;
+  height: 36px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.section-3 {
+  height: 500px;
+  background-image: url("./images/figure1.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  color: black;
+  font-family: "Inter", sans-serif;
+  justify-content: start;
+  align-items: center;
+  padding: 40px;
+  gap: 10px;
+}
+.text1 {
+  background-image: linear-gradient(
+    90.43deg,
+    #0090f7 0%,
+    #ba62fc 33.33%,
+    #f2416b 66.67%,
+    #f55600 100%
+  );
+  background-clip: text;
+  color: transparent;
+  margin-top: 350px;
+}
+.section-4 {
+  height: 500px;
+  background-image: url("./images/figure3.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  color: white;
+  font-family: "Inter", sans-serif;
+  justify-content: end;
+  align-items: center;
+  padding: 40px;
+  gap: 10px;
+}
+.size {
+  font-size: 18px;
+  display: block;
+  justify-content: center;
+  align-items: center;
+}
+.section-5 {
+  height: 500px;
+  background-image: url("./images/figure4.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  color: #000000;
+  font-family: "Inter", sans-serif;
+  justify-content: start;
+  align-items: center;
+  padding: 40px;
+  gap: 10px;
+}
+.vektor {
+  display: flex;
+  gap: 10px;
+}
+.section-6 {
+  height: 500px;
+  background-image: url("./images/figure5.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  color: #1d1d1f;
+  font-family: "Inter", sans-serif;
+  justify-content: start;
+  align-items: center;
+  padding: 40px;
+  gap: 10px;
+}
+.section-7 {
+  height: 500px;
+  background-image: url("./images/figure6.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  color: #1d1d1f;
+  font-family: "Inter", sans-serif;
+  justify-content: start;
+  align-items: center;
+  padding: 40px;
+  gap: 10px;
+}
+.section-8 {
+  height: 500px;
+  background-image: url("./images/figure7.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  color: #1d1d1f;
+  font-family: "Inter", sans-serif;
+  justify-content: end;
+  align-items: center;
+  padding: 40px;
+  gap: 10px;
+}
+.findyourdeal {
+  border: 1px solid #0071e3;
+  width: 126px;
+  height: 36px;
+  border-radius: 999px;
+  background-color: #0071e3;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.section-9 {
+  height: 500px;
+  background-image: url("./images/figure8.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  color: #1d1d1f;
+  font-family: "Inter", sans-serif;
+  justify-content: start;
+  align-items: center;
+  padding: 40px;
+  gap: 10px;
+}
+.getyourestimate {
+  border: 1px solid #0071e3;
+  width: 285px;
+  height: 36px;
+  border-radius: 999px;
+  background-color: #0071e3;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
