--- a/style.css
+++ b/style.css
@@ -3,14 +3,8 @@
   margin: 0;
   padding: 0;
 }
-
 .header {
-  display: flex;
-  flex-direction: column;
-  height: fit-content;
-  width: 100%;
-  /* height: 121px; */
-  gap: 20px;
+  height: 121px;
 }
 .menu {
   display: flex;
@@ -65,6 +59,7 @@
   align-items: center;
   padding: 40px;
   gap: 10px;
+  margin-bottom: 20px;
 }
 .section-2 {
   height: 500px;
@@ -79,6 +74,7 @@
   align-items: center;
   padding: 40px;
   gap: 10px;
+  margin-bottom: 20px;
 }
 .learnbutton1 {
   border: 1px solid white;
@@ -114,6 +110,7 @@
   align-items: center;
   padding: 40px;
   gap: 10px;
+  margin-bottom: 20px;
 }
 .text1 {
   background-image: linear-gradient(
@@ -140,12 +137,14 @@
   align-items: center;
   padding: 40px;
   gap: 10px;
+  margin-bottom: 20px;
 }
 .size {
   font-size: 18px;
-  display: block;
-  justify-content: center;
-  align-items: center;
+  /* display: block; */
+  /* justify-content: center;
+  align-items: center; */
+  text-align: center;
 }
 .section-5 {
   height: 500px;
@@ -160,6 +159,10 @@
   align-items: center;
   padding: 40px;
   gap: 10px;
+  margin-bottom: 20px;
+}
+.text2 {
+  text-align: center;
 }
 .vektor {
   display: flex;
@@ -178,6 +181,7 @@
   align-items: center;
   padding: 40px;
   gap: 10px;
+  margin-bottom: 20px;
 }
 .section-7 {
   height: 500px;
@@ -192,6 +196,7 @@
   align-items: center;
   padding: 40px;
   gap: 10px;
+  margin-bottom: 20px;
 }
 .section-8 {
   height: 500px;
@@ -206,6 +211,7 @@
   align-items: center;
   padding: 40px;
   gap: 10px;
+  margin-bottom: 20px;
 }
 .findyourdeal {
   border: 1px solid #0071e3;
@@ -231,6 +237,7 @@
   align-items: center;
   padding: 40px;
   gap: 10px;
+  margin-bottom: 20px;
 }
 .getyourestimate {
   border: 1px solid #0071e3;
@@ -242,4 +249,62 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.section-10 {
+  height: 500px;
+  background-image: url("./images/figure9.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-bottom: 20px;
+}
+.section-11 {
+  border: 1px solid transparent;
+  border-radius: 100%;
+  width: 8px;
+  height: 8px;
+  margin-bottom: 20px;
+}
+.dots {
+  display: flex;
+  gap: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  align-items: center;
+  justify-content: center;
+}
+.dotcolor {
+  background-color: #1d1d1f;
+}
+.dotcolor1 {
+  background-color: #0000006b;
+}
+.section-12-1 {
+  height: 134px;
+  width: 238px;
+  background-image: url("./images/backroundpic1.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-bottom: 20px;
+}
+.section-12-2 {
+  height: 134px;
+  width: 238px;
+  background-image: url("https://shorturl.at/2ZH4l");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-bottom: 20px;
+}
+.last-section {
+  display: flex;
+  gap: 20px;
+  overflow: hidden;
+}
+.playbutton {
+  background-image: url(./images/playbutton.png);
+  width: 24px;
+  height: 24px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  margin-right: 16px;
+  margin-left: 410px;
 }
